[gd_scene load_steps=10 format=2]

[ext_resource path="res://Mailbox Puzzle/Sprites/Mailbox Outline.png" type="Texture" id=1]
[ext_resource path="res://Mailbox Puzzle/Sprites/Mailbox.png" type="Texture" id=2]
[ext_resource path="res://Mailbox Puzzle/Sprites/Normal Mail.png" type="Texture" id=3]
[ext_resource path="res://Mailbox Puzzle/Sprites/Target Mail.png" type="Texture" id=4]
[ext_resource path="res://Mailbox Puzzle/vel 1/Mailbox.gd" type="Script" id=5]
[ext_resource path="res://InteractableArea.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 15.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Mails",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 15.5 )

[node name="Mailbox" type="Area2D"]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 4 )

[node name="MailboxSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Mails" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -16 )

[node name="Mail1" type="AnimatedSprite" parent="Mails"]
position = Vector2( -9, -1 )
frames = SubResource( 2 )
animation = "Mails"

[node name="Mail3" type="AnimatedSprite" parent="Mails"]
position = Vector2( 0, -11 )
frames = SubResource( 2 )
animation = "Mails"

[node name="Mail2" type="AnimatedSprite" parent="Mails"]
position = Vector2( 9, -1 )
frames = SubResource( 2 )
animation = "Mails"
flip_h = true

[node name="InteractableArea" parent="." instance=ExtResource( 6 )]
enabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )

[node name="OutlineSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Mailbox_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Mailbox_body_exited"]
